# UpPashkevichTestTask

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
transactions/: admin.py  models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_transaction_description_transaction_merchant.py
transactions/services/: categorizer.py  constants.py
transactions/tests/: test_views.py
users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_usermodel_daily_limit.py
users/tests/: test_utils.py
